--- a/style.css
+++ b/style.css
@@ -52,7 +52,9 @@ a:hover {
    }
 .row h3 {
     font-family: 'Alfa Slab One', cursive; 
+    
 }
+
 #orange {
     color: #F17300;
 }
@@ -123,16 +125,19 @@ a:hover {
   justify-content: center;
   position: relative;
   text-align: center;
-  padding: 60px;
+  padding: 30px;
 }
 .col-md-4 h3 {
     padding: 30px 0;
 }
 .col-md-4 p {
     line-height: 1.6;
-    
     padding: 30px;
-    
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    font-style: italic;
+   
 }
 .fa-facebook {
 color: #fff;
@@ -189,9 +194,6 @@ hr {
 }    
 
 
-.foot {
-    margin-left: 30px;
-    }
 .footer-copyright {
     padding: 10px;
     background: #2d2d2d;
